<resources>
    <string name="app_name">Psychonaut</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_substance_selector">SubstanceSelector</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>

    <string name="title_activity_substance_info">SubstanceInfo</string>
    <string name="unsafe">unsafe</string>
    <string name="cool_app_name_here">psychonaut</string>
    <string name="dosage">dosage</string>
    <string name="light">light</string>
    <string name="common">common</string>
    <string name="strong">strong</string>
    <string name="interactions">interactions</string>
    <string name="dangerous">dangerous</string>
    <string name="effects">effects</string>

    <string name="title_activity_overdose_info">OverdoseInfo</string>
    <string name="unknownDose">\? - ?</string>
    <string name="unknownDOse">\? - ?</string>
    <string name="overdose">overdose</string>
    <string name="toxicity">toxicity</string>

    <string name="title_activity_textac">textac</string>

    <string name="title_activity_overdose_selector">OverdoseSelector</string>

    <string name="title_activity_pill_reports">PillReports</string>

    <string name="title_activity_advanced_pill_search">AdvancedPillSearch</string>

    <string name="title_activity_splash">Splash</string>
    <string name="advanced_search">advanced search</string>

    <string name="title_activity_experience_report">ExperienceReport</string>
    <string name="experience_reports">experience reports</string>
    <string name="logo">logo</string>
    <string name="colour">colour</string>
    <string name="region">region</string>
    <string name="sub_region">sub region</string>
    <string name="state_province">state/province</string>
    <string name="search">search</string>
    <string name="overdose_help">overdose help</string>
    <string name="onset">onset</string>
    <string name="peak">peak</string>
    <string name="comeup">comeup</string>
    <string name="offset">offset</string>
    <string name="total">total</string>
    <string name="after_effects">after effects</string>
    <string name="substance_class">substance class</string>
    <string name="clickToExpand">click to expand summary</string>

    <string name="title_activity_experience_report_search">ExperienceReportSearch</string>

    <string name="title_activity_browse_substance_reports">BrowseSubstanceReports</string>
    <string name="treatment">treatment</string>
</resources>
